--- a/github.cabal
+++ b/github.cabal
@@ -268,6 +268,7 @@ test-suite github-test
     , file-embed
     , github
     , hspec                 >=2.6.1 && <2.12
+    , http-client
     , tagged
     , text
     , unordered-containers
