--- a/github.cabal
+++ b/github.cabal
@@ -184,17 +184,18 @@ library
   autogen-modules: Paths_github
 
   -- Packages bundles with GHC, mtl and text are also here
+  -- Lower bounds at least those of https://www.stackage.org/lts-10.0 (GHC 8.2.2)
   build-depends:
       base          >=4.10     && <5
-    , binary        >=0.7.1.0  && <0.11
-    , bytestring    >=0.10.4.0 && <0.13
-    , containers    >=0.5.5.1  && <1
-    , deepseq       >=1.3.0.2  && <1.6
+    , binary        >=0.8.5.1  && <0.11
+    , bytestring    >=0.10.8.2 && <0.13
+    , containers    >=0.5.10.2 && <1
+    , deepseq       >=1.4.3.0  && <1.6
     , exceptions    >=0.10.2   && <0.11
-    , mtl           >=2.1.3.1  && <2.2 || >=2.2.1 && <2.4
-    , text          >=1.2.0.6  && <2.2
+    , mtl           >=2.2.1    && <2.4
+    , text          >=1.2.2.2  && <2.2
     , time          >=1.8.0.2  && <2
-    , transformers  >=0.3.0.0  && <0.7
+    , transformers  >=0.5.2.0  && <0.7
 
   -- other packages
   build-depends:
