--- a/github.cabal
+++ b/github.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               github
-version:            0.30
+version:            0.30.0.1
 synopsis:           Access to the GitHub API, v3.
 category:           Network
 description:
@@ -30,6 +30,7 @@ copyright:
   Copyright 2012-2013 Mike Burns, Copyright 2013-2015 John Wiegley, Copyright 2016-2021 Oleg Grenrus
 
 tested-with:
+  GHC == 9.14.1
   GHC == 9.12.2
   GHC == 9.10.2
   GHC == 9.8.4
