--- a/samples/github-samples.cabal
+++ b/samples/github-samples.cabal
@@ -10,6 +10,7 @@ description:   Various samples of github package
 build-type:    Simple
 
 tested-with:
+  GHC == 9.14.1
   GHC == 9.12.2
   GHC == 9.10.2
   GHC == 9.8.4
